log/build_2024-10-12_01-22-10/my_python_node/stderr.log
  File "/home/zxq/laser_ws/install/my_python_node/lib/python3.10/site-packages/my_python_node/listener.py", line 116
    def main:
            ^
SyntaxError: invalid syntax

